# TurboPacker

./: .clang_tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TurboPacker.uproject
.github/workflows/: code_quality.yml
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: BPOnlinePackTester.uasset  BPPackTester.uasset  BPSpectralTester.uasset  BP_Packer.uasset  GM.uasset  MainLevel.umap  PackLevel.umap
Content/Boxes/: BP_Box1.uasset  BP_Box2.uasset  BP_Box3.uasset  BP_Box4.uasset  BP_RandomBox.uasset  CE_OpaqueReference.uasset  Cube.uasset  Mat_Box_1.uasset  Mat_Box_2.uasset  Mat_Box_3.uasset
Content/Configs/: BP_PackerConfig1.uasset  Config_1.uasset  PostPacs.uasset
Content/Gui/: OnlinePackerGui.uasset
Content/Input/: DefaultContext.uasset  IA_Clear.uasset  IA_Pack.uasset  PC_ObserverController.uasset
Content/SimBlank/Blueprints/: BP_SimGameMode.uasset  BP_SimPlayerController.uasset
Content/SoftBody/: ControlRig_Sphere_solid.uasset  SoftBodySolver.uasset  TestBox.uasset  TestBoxFlow.uasset
Fonts/: imgui.ini
Libs/FFTW/: fftw3.h  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
Libs/eigen/unsupported/Eigen/src/FFT/: ei_fftw_impl.h
Source/: TurboPacker.Target.cs  TurboPackerEditor.Target.cs
Source/TurboPacker/: DiscreteMap.cpp  DiscreteMap.h  Gui.cpp  Gui.h  Logger.cpp  Logger.hpp  PackTester.cpp  PackTester.h  TurboPacker.Build.cs  TurboPacker.cpp  TurboPacker.h  TurboPackerGameModeBase.cpp  TurboPackerGameModeBase.h  Util.cpp  Util.h
Source/TurboPacker/lode/: lodepng.cpp
include/: TP.hpp  Util.hpp  font_bold.h  font_regular.h  logo.h
src/: main.cpp  main_a.cpp  main_eth.cpp
